get next to closest compatible version to clerk

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,65 @@ node_modules
 # Keep environment variables out of version control
 .env
 .env*.local
+.next/app-build-manifest.json
+.next/react-loadable-manifest.json
+.next/trace
+.next/cache/webpack/client-development/0.pack.gz
+.next/cache/webpack/client-development/1.pack.gz
+.next/cache/webpack/client-development/2.pack.gz
+.next/cache/webpack/client-development/3.pack.gz
+.next/cache/webpack/client-development/index.pack.gz
+.next/cache/webpack/client-development/index.pack.gz.old
+.next/cache/webpack/edge-server-development/0.pack.gz
+.next/cache/webpack/edge-server-development/index.pack.gz
+.next/cache/webpack/edge-server-development/index.pack.gz.old
+.next/cache/webpack/server-development/0.pack.gz
+.next/cache/webpack/server-development/1.pack.gz
+.next/cache/webpack/server-development/2.pack.gz
+.next/cache/webpack/server-development/index.pack.gz
+.next/cache/webpack/server-development/index.pack.gz.old
+.next/server/app-paths-manifest.json
+.next/server/edge-runtime-webpack.js
+.next/server/middleware-build-manifest.js
+.next/server/middleware-manifest.json
+.next/server/middleware-react-loadable-manifest.js
+.next/server/middleware.js
+.next/server/server-reference-manifest.js
+.next/server/server-reference-manifest.json
+.next/server/webpack-runtime.js
+.next/server/app/page_client-reference-manifest.js
+.next/server/app/page.js
+.next/server/app/(dashboard)/add-job/page_client-reference-manifest.js
+.next/server/app/(dashboard)/add-job/page.js
+.next/server/app/favicon.ico/route.js
+.next/server/vendor-chunks/@clerk.js
+.next/server/vendor-chunks/@peculiar.js
+.next/server/vendor-chunks/@tanstack.js
+.next/server/vendor-chunks/asn1js.js
+.next/server/vendor-chunks/next.js
+.next/server/vendor-chunks/react-hook-form.js
+.next/server/vendor-chunks/react-remove-scroll.js
+.next/static/chunks/_app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsComponent_6ELMOJL2_js.js
+.next/static/chunks/_app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsComponent_CDWEKZTF_js.js
+.next/static/chunks/_app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsPanelComponent_5A54IY5X_js.js
+.next/static/chunks/_app-pages-browser_node_modules_tanstack_query-devtools_build_DevtoolsPanelComponent_PULY4AJ7_js.js
+.next/static/chunks/app-pages-internals.js
+.next/static/chunks/main-app.js
+.next/static/chunks/polyfills.js
+.next/static/chunks/webpack.js
+.next/static/chunks/app/layout.js
+.next/static/chunks/app/page.js
+.next/static/chunks/app/(dashboard)/layout.js
+.next/static/chunks/app/(dashboard)/add-job/page.js
+.next/static/css/css-app_globals_css-node_modules_next_font_google_target_css.css
+.next/static/css/app/layout.css
+.next/static/webpack/3df1ee4d44f086de.webpack.hot-update.json
+.next/static/webpack/450e575970c702b9.webpack.hot-update.json
+.next/static/webpack/a58f0eaceb1b33df.webpack.hot-update.json
+.next/static/webpack/bcb4c6a10abeae01.webpack.hot-update.json
+.next/static/webpack/webpack.3df1ee4d44f086de.hot-update.js
+.next/static/webpack/webpack.450e575970c702b9.hot-update.js
+.next/static/webpack/webpack.a58f0eaceb1b33df.hot-update.js
+.next/static/webpack/webpack.bcb4c6a10abeae01.hot-update.js
+.next/static/webpack/app/layout.3df1ee4d44f086de.hot-update.js
+.next/static/webpack/app/layout.bcb4c6a10abeae01.hot-update.js
